python-deployment.yaml
# Source: python/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python
  labels:
    helm.sh/chart: python-0.1.0
    app.kubernetes.io/name: python
    app.kubernetes.io/instance: python
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: python
    app.kubernetes.io/instance: python
---
# Source: python/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
  labels:
    helm.sh/chart: python-0.1.0
    app.kubernetes.io/name: python
    app.kubernetes.io/instance: python
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: python
      app.kubernetes.io/instance: python
  template:
    metadata:
      labels:
        app.kubernetes.io/name: python
        app.kubernetes.io/instance: python
    spec:
      serviceAccountName: python
      securityContext:
        {}
      containers:
        - name: python
          securityContext:
            {}
          image: "shashankv1999/hello-python:d4ffcfc"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: python/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python
  labels:
    helm.sh/chart: python-0.1.0
    app.kubernetes.io/name: python
    app.kubernetes.io/instance: python
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "loft-python.vinodtestingkubeace.tk"
      secretName: loftpython-tls
  rules:
    - host: "loft-python.vinodtestingkubeace.tk"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: python
                port:
                  number: 5000
